# Pomodoro

./: .pro  CMakeLists.txt  README.md  app.qrc  circularprogress.cpp  circularprogress.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  task.h  taskeditdialog.cpp  taskeditdialog.h  taskprogressbar.cpp  taskprogressbar.h  开发日志.txt
